# Minimal-Rust-Program

./: Cargo.toml  README.md  build.bat
src/: main.rs
