[package]
name = "minimal-rust-program"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-sys = { version = "0.52.0", features = [
	"Win32_Foundation", 
	"Win32_System", 
	"Win32_System_Threading", 
	"Win32_System_Memory",
	"Win32_UI_WindowsAndMessaging",
	"Win32_Graphics_Gdi",
	"Win32_System_LibraryLoader",
	"Win32_Graphics_OpenGL",
	"Win32_Media",
	"Win32_Media_Audio",
	"Win32_Media_Multimedia",
    "Win32_System_Console",
]}

[profile.release]
panic = "abort"
strip = true
codegen-units = 1
opt-level = "z"





